CHANGES IN FLTK 1.1.0b5

	- Fl::set_boxtype() and fl_internal_boxtype() now keep
	  track of when a boxtype is changed; this allows you to
	  override the "special" boxtypes without references to
	  those boxtypes causing them to be reset.
	- Fl_Help_Func now takes a Fl_Widget pointer as well as
	  a pathname.
	- Added code to support FL_KEYUP events.


CHANGES IN FLTK 1.1.0b4

	**** NOTE: DUE TO CHANGES IN THE FL_WIDGET CLASS, ****
	****       YOU MUST RECOMPILE ALL SOURCE FILES    ****
	****       THAT USE FLTK!!!                       ****

	- Updated the flags_ member of Fl_Widget to be an
	  integer instead of uchar, to support the new
	  FL_OVERRIDE flag for Fl_Window.

	- The parent() method of Fl_Widget now uses pointers to
	  Fl_Group instead of Fl_Widget.

	- Fl_Window now provides the FLTK 2.0 "override()" and
	  "set_override()" methods for windows.

	- Added a configure check (and warning) for GCC 3.0.x.

	- Updated the configure script to check for the
	  png_set_tRNS_to_alpha() function.

	- Updated the config.h files for all platforms for the
	  image and FLTK documentation defines.

	- Updated the makeinclude files for all platforms to
	  match the current makeinclude.in file.

	- FLUID would crash if you cleared an image for a
	  widget.

	- Fl_Help_View::add_image() did not initialize the image
	  member of the base (unscaled) image.

	- Fl_Help_View didn't support A elements with both a
	  NAME and HREF attribute - the HREF was ignored.

	- Miscellaneous compile warning fixes.

	- Tooltips were being reset by Fl::belowmouse(), which
	  caused problems with the FLUID main window (flashing
	  tooltip windows and serious problems with KDE 2.2)

	- The editor demo had the save and discard button
	  actions reversed.

	- The Fl_Help_View widget now uses
	  png_destroy_read_struct() if the older
	  png_read_destroy() function is not available.

	- The WIN32 DLL library now includes the OpenGL widgets.